--- a/src/api/nodejs/package.json
+++ b/src/api/nodejs/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "ffi": "^2.0.0",
-    "ref": "^1.2.0"
+    "ref": "^1.2.0",
+    "ref-array": "^1.1.2"
   }
 }
